--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-offline": "^4.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
-    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-sharp": "~3.8.0",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-sharp": "^3.9.0",
     "prop-types": "^15.7.2",
