--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "gatsby": "^3.9.0",
+    "dotenv": "^10.0.0",
+    "gatsby": "^4.4.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-gatsby-cloud": "^2.9.0",
-    "gatsby-plugin-image": "^1.9.0",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
-    "gatsby-plugin-offline": "^4.9.0",
-    "gatsby-plugin-react-helmet": "^4.9.0",
-    "gatsby-plugin-sharp": "^3.14.3",
-    "gatsby-source-filesystem": "^3.9.0",
-    "gatsby-transformer-sharp": "^3.9.0",
+    "gatsby-plugin-gatsby-cloud": "^4.4.0",
+    "gatsby-plugin-google-gtag": "^4.4.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "prettier": "^2.5.1"
   },
   "keywords": [
     "gatsby"
